--- a/lang/fr.json
+++ b/lang/fr.json
@@ -28,7 +28,7 @@
     "Pagination Navigation": "Pagination",
     "Password": "Mot de passe",
     "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail :",
-    "Regards": "Cordialement",
+    "Regards": "À bientôt",
     "Register": "Inscription",
     "Remember me": "Se souvenir de moi",
     "Resend Verification Email": "Renvoyer l'e-mail de vérification",
